--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/login.css">
-    <script src="scripts/login.js" defer></script>
-    <script src="scripts/create-user-login.js" defer></script>
+    <script src="login/login-fetch.js" defer></script>
+    <script src="login/login-handlers.js" defer></script>
     <title>Game Finder</title>
 </head>
-<body>
+<body class="body">
     <header>
-        <img src="./assets/GAMEFINDER.png" alt="Game finder logo">
+        <img src="./assets/game-finder-logo.png" alt="Game finder logo">
     </header>
     <main>  
         <div class="auth-page-container">
@@ -34,6 +34,7 @@
                     <input class="input-password" type="password" name="password"  placeholder="Password" maxlength="12" id="input-password">
                     <img src= "./assets/icons-login/Eye.svg" alt="Eye icon for visibility" class="toggle-password" >
                 </div>
+                <div id="error-container" class="hidden"></div>
             </div>
             <div class="input-box-side">
                 <div class="input-box-remember-me">
@@ -60,6 +61,13 @@
         </div>
         <div class="slide2"><img src="./assets/icons-login/ChevronRightLight.svg" alt="Right icon"></div>
      </main>
-     <div class="carrousel"><img src="./assets/icons-login/SliderLight.svg" alt="Carrousel"></div>
+     <div class="carrousel">
+         <div class="active"></div>
+         <div class="carrousel-dot-2"></div>
+         <div class="carrousel-dot-3"></div>
+         <div class="carrousel-dot-4"></div>
+         <div class="carrousel-dot-5"></div>
+         <div class="carrousel-dot-6"></div>
+     </div>
 </body>
 </html>
