--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="./styles/login.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="login/login-fetch.js" defer></script>
     <script src="login/login-handlers.js" defer></script>
     <title>Game Finder</title>
@@ -62,7 +63,7 @@
         <div class="slide2"><img src="./assets/icons-login/ChevronRightLight.svg" alt="Right icon"></div>
      </main>
      <div class="carrousel">
-         <div class="active"></div>
+         <div class="carrousel-dot-1"></div>
          <div class="carrousel-dot-2"></div>
          <div class="carrousel-dot-3"></div>
          <div class="carrousel-dot-4"></div>
