--- a/home.html
+++ b/home.html
@@ -19,8 +19,41 @@
 <body>
     <div class="search-overlay"></div>
     <header>
-        <div class="logo">
+        <div class="container-hamburger">
+            <div class="menu-hamburger">
+                <div class="cross-hamburger">
+                    <img src= "assets/cross.svg">
+                </div>
+                <div class="container-user">
+                    <span class="avatar">
+                        <img src="assets/avatar-woman.png">
+                    </span>
+                    <div class="user-info">
+                        <div class="user-name">Jane Doe</div>
+                        <div class="at-user">@JaneDoe</div>
+                    </div>
+                </div>
+                <hr>
+                <nav class="navigation-links">
+                    <a href="#" class="navigation-home">Home</a>
+                    <a href="#" class="navigation-dark">Review</a>
+                    <a href="#" class="navigation-dark">New releases</a>
+                    <a href="#" class="navigation-dark">Popular</a>
+                    <div class="logt">
+                        <hr>
+                        <a href="#">Logout</a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+         <span class="hamburger">
+           <img src="./assets/icons-home/hamburguer.svg" class="h"> 
+        </span>  
+    <div class="logo">
         <img src="./assets/game-finder-logo-white.png" alt="Game finder logo">
+    </div>
+    <div class="search-mobile">
+        <img src="assets/icons-home/search-mobile.svg" alt="Search icon">
     </div>
     <form class="search-bar">
         <img src="./assets/icons-home/search-bar.svg" alt="Search icon">
@@ -28,16 +61,15 @@
         <img src= "./assets/close-icon.svg" alt= "Close icon" class="close-icon">
         <div class="container-games-list">
             <div class="games-list">
-            <ol class="list">
-                <li class="games-list-game"></li>
-            </ol>
+                <ol class="list">
+                    <li class="games-list-game"></li>
+                </ol>
             </div>
         </div>
     </form>  
     <div class="side">
-    <a href="#" class= "log-out">Log out</a>
-    <span class="avatar-user">
-    </span> 
+        <a href="#" class= "log-out">Log out</a>
+        <span class="avatar-user"></span> 
     </div>
    </header>
 <main>
@@ -48,7 +80,7 @@
         </div>
         <div class="mode">
             <div class="dark-mode">
-                <h3>Dark mode</h3>
+                <h2>Dark mode</h2>
                 <img src="./assets/icons-mode/Dark-mode-off.svg" class="dark-off" alt="dark mode off">
             </div>
             <div class="thumbnail">
