created skeleton and responsive corrections

--- a/home.html
+++ b/home.html
@@ -135,7 +135,125 @@
         </nav>
         <div class="container-single">
         </div>
-        <div class="loading"></div>
+        <div class="skeleton">
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+            <div class="card-skeleton">
+                <div class="title-skeleton"></div>
+                <div class="container-sk">
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                    <div class="container-details-skeleton">
+                        <ol class="details-skeleton"></ol>
+                        <ol class="details-skeleton"></ol>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section class="container-cards">
         </section>
     </div>
