changed README, fixed Hamburger in reponsive tablet and renders empty last searches

--- a/home.html
+++ b/home.html
@@ -21,16 +21,14 @@
     <header>
         <div class="container-hamburger">
             <div class="menu-hamburger">
-                <div class="cross-hamburger">
-                    <img src= "assets/cross.svg">
-                </div>
                 <div class="container-user">
                     <span class="avatar">
-                        <img src="assets/avatar-woman.png">
+                        <img src="">
                     </span>
                     <div class="user-info">
-                        <div class="user-name">Jane Doe</div>
-                        <div class="at-user">@JaneDoe</div>
+                        <div class="user-name"></div>
+                        <div class="at-user"></div>
+                        <div class="cross-hamburger"><img src= "assets/cross.svg"></div>
                     </div>
                 </div>
                 <hr>
@@ -39,11 +37,11 @@
                     <a href="#" class="navigation-dark">Review</a>
                     <a href="#" class="navigation-dark">New releases</a>
                     <a href="#" class="navigation-dark">Popular</a>
-                    <div class="logt">
-                        <hr>
-                        <a href="#">Logout</a>
-                    </div>
                 </nav>
+                <div class="logt">
+                    <hr>
+                    <a href="#">Logout</a>
+                </div>
             </div>
         </div>
          <span class="hamburger">
@@ -62,7 +60,7 @@
         <div class="container-games-list">
             <div class="games-list">
                 <ol class="list">
-                    <li class="games-list-game"></li>
+                    <li class="games-list-game">No recent searches were found</li>
                 </ol>
             </div>
         </div>
@@ -92,9 +90,9 @@
     <div class="container-main">
         <nav>
             <div class="links-navbar">
-                <a class="links-home" href="">Home</a>
-                <a class= "links-dark" href="">Review</a>
-                <a class="links-dark" href="">New releases</a>
+                <a class="links-home" href="#">Home</a>
+                <a class= "links-dark" href="#">Review</a>
+                <a class="links-dark" href="#">New releases</a>
             </div>
 
             <div class="links-time">
@@ -102,19 +100,19 @@
                     <div class="icon-navbar">
                         <img src="./assets/icons-home/star.svg" alt="Star icon">
                     </div>
-                    <a class="links-time-week" href="">This week</a>
+                    <a class="links-time-week" href="#">This week</a>
                 </div>
                 <div class="links-time2">
                     <div class="icon-navbar">
                         <img src="./assets/icons-home/calendar.svg" alt="Calendar icon">
                     </div>
-                    <a href="">This month</a>
+                    <a href="#">This month</a>
                 </div>
                 <div class="links-time2">
                     <div class="icon-navbar">
                         <img src="./assets/icons-home/clock.svg" alt="Clock icon">
                     </div>
-                    <a href="">Coming soon</a>
+                    <a href="#">Coming soon</a>
                 </div>
             </div>
 
@@ -130,7 +128,7 @@
                     <div class="icon-navbar-popular">
                         <img src="./assets/icons-home/thumbs.svg" alt="Thumbs up icon">
                     </div>
-                    <a href="">Best of the year</a>
+                    <a href="#">Best of the year</a>
                 </div>
         </nav>
         <div class="container-single">
