--- a/index.html
+++ b/index.html
@@ -42,33 +42,40 @@
                     <input type="checkbox">
                     <label class="label-remember-me">Remember me </label>
                 </div> 
-                <a href="" class="forgot-password">Forgot password?</a>
+                <a href="#" class="forgot-password">Forgot password?</a>
             </div>
             <button class="login-button" type="submit">Log in</button>
         </form>
             <div class="registration">
                 <span class="registration-none"> Not registred yet?</span>
-                <a href="" class="registration-now"> Register now </a>
+                <div class="tooltip top">-<span class="tiptext">Coming soon...</span></div>
+                <a href="#" class="registration-now"> Register now </a>
         </div>
         <div class="line">or</div>
         <div class="social-media-list">
-            <a href="" class="social-button1">
-            <img src="./assets/icons-login/facebook.svg" alt="Facebook icon"> <div class="social-tittle">Login with Facebook</div></a>
-            <a href="" class="social-button2">
+            <a href="#" class="social-button1">
+                <div class="tooltip top">-<span class="tiptext">Coming soon...</span></div>
+            <img src="./assets/icons-login/facebook.svg" alt="Facebook icon"> 
+            <div class="social-tittle">Login with Facebook</div></a>
+            <a href="#" class="social-button2">
+                <div class="tooltip top">-<span class="tiptext">Coming soon...</span></div>
                 <img src="./assets/icons-login/twitter.svg" alt="Twitter icon"><div class="social-tittle">Login with Twitter</div></a>
-            <a href="" class="social-button3">
+            <a href="#" class="social-button3">
+                <div class="tooltip top">-<span class="tiptext">Coming soon...</span></div>
                 <img src="./assets/icons-login/google.svg" alt="Google icon"><div class="social-tittle">Login with Google</div></a>
         </div>
         </div>
         <div class="slide2"><img src="./assets/icons-login/ChevronRightLight.svg" alt="Right icon"></div>
      </main>
-     <div class="carrousel">
-         <div class="carrousel-dot-1"></div>
-         <div class="carrousel-dot-2"></div>
-         <div class="carrousel-dot-3"></div>
-         <div class="carrousel-dot-4"></div>
-         <div class="carrousel-dot-5"></div>
-         <div class="carrousel-dot-6"></div>
+     <div class="container-carrousel">
+        <div class="carrousel">
+            <div class="carrousel-dot-1"></div>
+            <div class="carrousel-dot-2"></div>
+            <div class="carrousel-dot-3"></div>
+            <div class="carrousel-dot-4"></div>
+            <div class="carrousel-dot-5"></div>
+            <div class="carrousel-dot-6"></div>
+        </div>
      </div>
 </body>
 </html>
