fixed last searches, started dark mode

--- a/home.html
+++ b/home.html
@@ -39,8 +39,15 @@
                     <a href="#" class="navigation-dark">Popular</a>
                 </nav>
                 <div class="logt">
+                    <div class="dark-mobile-container">
                     <hr>
-                    <a href="#">Logout</a>
+                    <div class="dark-mode-mobile">
+                        <p class="dark-mobile">Dark mode</p>
+                        <div class="button-dark-off" ><img src="assets/icons-mode/Dark-mode-off.svg"></img></div>
+                    </div>
+                    </div>
+                    <hr class="hr-line">
+                    <a class= "log-out-ham" href="#">Logout</a>
                 </div>
             </div>
         </div>
