finished dark mode, started find by console

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                     <hr>
                     <div class="dark-mode-mobile">
                         <p class="dark-mobile">Dark mode</p>
-                        <div class="button-dark-off" ><img src="assets/icons-mode/Dark-mode-off.svg"></img></div>
+                        <div ><img class="button-dark-off"  src="assets/icons-mode/Dark-mode-off.svg"></img></div>
                     </div>
                     </div>
                     <hr class="hr-line">
