dark mode for skeleton, spinner for last searches, refactor

--- a/home.html
+++ b/home.html
@@ -61,6 +61,7 @@
         <img src="assets/icons-home/search-mobile.svg" alt="Search icon">
     </div>
     <form class="search-bar">
+        <div class="dot-pulse"></div>
         <img src="./assets/icons-home/search-bar.svg" alt="Search icon">
         <input class= "search-games" onfocus="this.value=''" type="text" placeholder="Search games...">
         <img src= "./assets/close-icon.svg" alt= "Close icon" class="close-icon">
