--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
             <div class="carrousel-dot-5"></div>
             <div class="carrousel-dot-6"></div>
         </div>
+        <div class="container-modal-error">
+            <div class="modal-error">
+                <span class="warning-error">⚠</span>
+                <span class="title-error">Sorry, something went wrong!</span>
+                <button class="confirm-error">Ok</button>
+            </div>
      </div>
 </body>
 </html>
