fix hamburger, change hamburger icon on modal open

--- a/home.html
+++ b/home.html
@@ -49,15 +49,15 @@
             </div>
         </div>
          <span class="hamburger">
-           <img src="./assets/icons-home/hamburguer.svg" class="h"> 
-        </span>  
+           <img class="h">
+        </span>
     <div class="logo">
         <img src="./assets/game-finder-logo-white.png" alt="Game finder logo">
     </div>
     <div class="search-mobile">
         <img src="assets/icons-home/search-mobile.svg" alt="Search icon">
     </div>
-    <form class="search-bar">
+    <form class="search-bar block-on">
         <div class="dot-pulse"></div>
         <img src="./assets/icons-home/search-bar.svg" alt="Search icon">
         <input class= "search-games" onfocus="this.value=''" type="text" placeholder="Search games...">
@@ -69,10 +69,10 @@
                 </ol>
             </div>
         </div>
-    </form>  
+    </form>
     <div class="side">
         <a href="#" class= "log-out">Log out</a>
-        <span class="avatar-user"></span> 
+        <span class="avatar-user"></span>
     </div>
    </header>
 <main>
@@ -278,7 +278,7 @@
         </section>
     </div>
     <div class="container-modal">
-    </div>  
+    </div>
 </main>
 <footer class="footer"></footer>
 </body>
