refactor and changed readme

--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/icon-game-green.png" type="image/png" sizes="32x32"/>
     <link rel="stylesheet" href="./styles/home.css">
     <script src="home/home-fetch.js" defer></script>
     <script src="home/home-handlers.js" defer></script>
@@ -20,12 +21,12 @@
             <div class="menu-hamburger">
                 <div class="container-user">
                     <span class="avatar">
-                        <img src="">
+                        <img src="" alt="User avatar">
                     </span>
                     <div class="user-info">
                         <div class="user-name"></div>
                         <div class="at-user"></div>
-                        <div class="cross-hamburger"><img src= "assets/cross.svg"></div>
+                        <div class="cross-hamburger"><img src= "assets/cross.svg" alt="Close icon"></div>
                     </div>
                 </div>
                 <hr>
@@ -40,7 +41,7 @@
                     <hr>
                     <div class="dark-mode-mobile">
                         <p class="dark-mobile">Dark mode</p>
-                        <div ><img class="button-dark-off"  src="assets/icons-mode/Dark-mode-off.svg"></img></div>
+                        <div ><img class="button-dark-off"  src="assets/icons-mode/dark-mode-off.svg"></img></div>
                     </div>
                     </div>
                     <hr class="hr-line">
@@ -52,7 +53,7 @@
            <img class="h">
         </span>
     <div class="logo">
-        <img src="./assets/game-finder-logo-white.png" alt="Game finder logo">
+        <img src="./assets/logos/game-finder-logo-white.png" alt="Game finder logo">
     </div>
     <div class="search-mobile">
         <img src="assets/icons-home/search-mobile.svg" alt="Search icon">
@@ -61,7 +62,7 @@
         <div class="dot-pulse"></div>
         <img src="./assets/icons-home/search-bar.svg" alt="Search icon">
         <input class= "search-games" onfocus="this.value=''" type="text" placeholder="Search games...">
-        <img src= "./assets/close-icon.svg" alt= "Close icon" class="close-icon">
+        <img src= "./assets/icons-home/close-icon.svg" alt= "Close icon" class="close-icon">
         <div class="container-games-list">
             <div class="games-list">
                 <ol class="list">
@@ -84,11 +85,11 @@
         <div class="mode">
             <div class="dark-mode">
                 <h2>Dark mode</h2>
-                <img src="./assets/icons-mode/Dark-mode-off.svg" class="dark-off" alt="dark mode off">
+                <img src="./assets/icons-mode/dark-mode-off.svg" class="dark-off" alt="Dark mode off">
             </div>
             <div class="thumbnail">
-                <img src="./assets/icons-mode/Multiple-Active.svg" class="column-active" alt="thumbnails active">
-                <img src="./assets/icons-mode/Single-Inactive.svg" class="one-card-inactive" alt="thumbnails inactive">
+                <img src="./assets/icons-mode/multiple-active.svg" class="column-active" alt="Thumbnails active">
+                <img src="./assets/icons-mode/single-inactive.svg" class="one-card-inactive" alt="Thumbnails inactive">
             </div>
         </div>
     </div>
@@ -280,6 +281,6 @@
     <div class="container-modal">
     </div>
 </main>
-<footer class="footer"></footer>
+<footer></footer>
 </body>
 </html>
