--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/login.css">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" href="assets/icon-game-green.png" type="image/png" sizes="32x32"/>
     <script src="login/login-fetch.js" defer></script>
     <script src="login/login-handlers.js" defer></script>
     <title>Game Finder</title>
 </head>
-<body class="body">
+<body>
     <header>
-        <img src="./assets/game-finder-logo.png" alt="Game finder logo">
+        <img src="./assets/logos/game-finder-logo.png" alt="Game finder logo">
     </header>
     <main>  
         <div class="auth-page-container">
-            <div class="slide1"><img src="./assets/icons-login/ChevronLeftLigth.svg" alt="Left icon"></div>
+            <div class="slide1"><img src="./assets/icons-login/chevron-left-light.svg" alt="Left slider icon"></div>
             <div class="auth-page-card">
                 <div class="container-words">
                     <h1 class="welcome">Welcome! Log in or register </h1>
@@ -33,7 +32,7 @@
                     </div>
                 <div class="input-box-password">
                     <input class="input-password" type="password" name="password"  placeholder="Password" maxlength="12" id="input-password">
-                    <img src= "./assets/icons-login/Eye.svg" alt="Eye icon for visibility" class="toggle-password" >
+                    <img src= "./assets/icons-login/eye.svg" alt="Eye icon for visibility" class="toggle-password" >
                 </div>
                 <div id="error-container" class="hidden"></div>
             </div>
@@ -65,7 +64,7 @@
                 <img src="./assets/icons-login/google.svg" alt="Google icon"><div class="social-tittle">Login with Google</div></a>
         </div>
         </div>
-        <div class="slide2"><img src="./assets/icons-login/ChevronRightLight.svg" alt="Right icon"></div>
+        <div class="slide2"><img src="./assets/icons-login/chevron-right-light.svg" alt="Right icon"></div>
      </main>
      <div class="container-carrousel">
         <div class="carrousel">
