--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the home page for an application that searches games"/>
+    <meta name="keywords" content="Game, console, search"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -26,7 +28,7 @@
                     <div class="user-info">
                         <div class="user-name"></div>
                         <div class="at-user"></div>
-                        <div class="cross-hamburger"><img src= "assets/cross.svg" alt="Close icon"></div>
+                        <div class="cross-hamburger"><img src="assets/cross.svg" alt="Close icon"></div>
                     </div>
                 </div>
                 <hr>
@@ -41,7 +43,7 @@
                     <hr>
                     <div class="dark-mode-mobile">
                         <p class="dark-mobile">Dark mode</p>
-                        <div ><img class="button-dark-off"  src="assets/icons-mode/dark-mode-off.svg"></img></div>
+                        <div ><img class="button-dark-off" src="assets/icons-mode/dark-mode-off.svg"></img></div>
                     </div>
                     </div>
                     <hr class="hr-line">
