--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a login page for an application that searches games"/>
+    <meta name="keywords" content="Game, console, search"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/login.css">
     <link rel="icon" href="assets/icon-game-green.png" type="image/png" sizes="32x32"/>
-    <script src="login/login-fetch.js" defer></script>
-    <script src="login/login-handlers.js" defer></script>
+    <script type="module" src="login/login-fetch.js" defer></script>
+    <script type="module" src="login/login-handlers.js" defer></script>
     <title>Game Finder</title>
 </head>
 <body>
