--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/home.css">
     <script src="home/home-fetch.js" defer></script>
     <script src="home/home-handlers.js" defer></script>
+    <script src="home/home-helpers.js" defer></script>
     <script src="home/home-render.js" defer></script>
     <title>Game finder</title>
 </head>
