set header max-width

--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
 <body>
     <div class="search-overlay"></div>
     <header>
+      <div class="header-content">
         <div class="container-hamburger">
             <div class="menu-hamburger">
                 <div class="container-user">
@@ -77,6 +78,7 @@
     <div class="side">
         <a href="#" class= "log-out">Log out</a>
         <span class="avatar-user"></span>
+    </div>
     </div>
    </header>
 <main>
