--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/login.css">
     <link rel="icon" href="assets/icon-game-green.png" type="image/png" sizes="32x32"/>
-    <script type="module" src="login/login-fetch.js" defer></script>
-    <script type="module" src="login/login-handlers.js" defer></script>
+    <script src="login/login-fetch.js" defer></script>
+    <script src="login/login-handlers.js" defer></script>
     <title>Game Finder</title>
 </head>
 <body>
